--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-bulder-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,10 @@
   "dependencies": {
     "chokidar": "^4.0.3",
     "express": "^5.1.0",
+    "tree-sitter": "^0.25.0",
+    "tree-sitter-javascript": "^0.25.0",
+    "tree-sitter-python": "^0.25.0",
+    "tree-sitter-typescript": "^0.23.2",
     "ws": "^8.18.3"
   }
 }
