--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.2",
+    "@xenova/transformers": "^2.17.2",
     "chokidar": "^4.0.3",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "openai": "^6.3.0",
     "tree-sitter": "^0.25.0",
     "tree-sitter-javascript": "^0.25.0",
     "tree-sitter-python": "^0.25.0",
