connect neo4j and make script of node and edge

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chokidar": "^4.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "neo4j-driver": "^6.0.0",
     "openai": "^6.3.0",
     "tree-sitter": "^0.25.0",
     "tree-sitter-javascript": "^0.25.0",
